--- a/App/common/package.json
+++ b/App/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microproj/proj",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -8,8 +8,8 @@
     "build/**/*"
   ],
   "scripts": {
-    "build":"npm run clean && tsc",
-    "clean":"del ./build/*"
+    "build": "npm run clean && tsc",
+    "clean": "del ./build/*"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +17,14 @@
   "devDependencies": {
     "del-cli": "^5.1.0",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "@types/cookie-session": "^2.0.49",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "cookie-session": "^2.1.0",
+    "express": "^4.19.2",
+    "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
