--- a/App/auth/package.json
+++ b/App/auth/package.json
@@ -9,10 +9,10 @@
     "start": "node build/index.js",
     "test": "jest --watchAll --no-cache"
   },
-  "jest":{
-    "preset":"ts-jest",
-    "testEnvironment":"node",
-    "setupFilesAfterEnv":[
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
       "./src/test/setup.ts"
     ]
   },
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@microproj/proj": "^1.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-session": "^2.0.49",
     "@types/dotenv": "^8.2.0",
